--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         
                         <a href="mailto:noah.surprenant@gmail.com">noah.surprenant@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am looking for an entry-level IT job.</p>
+                    <p class="lead mb-5">IT Support @ Universal Logistics Holdings</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/noahsurprenant/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/noahsurprenant"><i class="fab fa-github"></i></a>
@@ -59,27 +59,35 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">IT Support</h3>
+                            <div class="subheading mb-3">Universal Logistics Holdings</div>
+                            <p>Provide technical assistance to our employees and partners across the company over the phone and through ticketing system. My job is to ensure that the rest of the company can run smoothly.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">General Merchandise Clerk</h3>
                             <div class="subheading mb-3">Meijer</div>
-                            <p>Return unwanted or misplaced merchandise to shelves. Stock new product to shelves. Straighten merchandise and provide customer service to increase sales. Answer customer inquiries on the phone. Document throwaways accurately. Provide cashiers with UPCs to ensure smooth transaction. Trained across multiple departments in the General Merchandise side of the store. This includes feeding fish, cleaning aquariums, logging refrigerator temperatures, selling hunting licenses, blowing up balloons, etc. A typical day’s work has me in many parts of the store. I help cashier or push carts when needed.</p>
+                            <p>Conditioned merchandise, provided customer service in person and on phone, returned unwanted or misplaced merchandise to shelves, and stocked new product. I was trained across multiple departments in General Merchandise: fish, hunting licenses, balloons, garden center, electronics, etc. A typical day’s work had me in many parts of the store helping wherever needed, worked as a cashier or cart pusher when necessary.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - August 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">IT Tutor</h3>
                             <div class="subheading mb-3">Macomb Community College</div>
-                            <p>Maintain accurate records of tutoring sessions. Advise students on how to solve a problem and explain concepts in ways that are easy to understand. I tutor various Information Technology courses: Microsoft Office, Python, C++, database design, game development, HTML/CSS, & networking. During the COVID-19 pandemic tutoring went online. The Reading & Writing studio had a scheduling system prior to the pandemic, and I helped to implement it for the tutors.</p>
+                            <p>I tutored various Information Technology courses: Microsoft Office, Python, C++, database design, game development, HTML/CSS, & networking. Tutored on ground and transitioned to online after the start of the COVID-19 pandemic.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">November 2019 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2019 - May 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Cart Pusher</h3>
                             <div class="subheading mb-3">Meijer</div>
-                            <p>Returned shopping carts to inside the store. Kept the parking lot clean of trash. Carry out heavy items for customers. COVID-19 was confirmed in Michigan during my last three weeks. Spontaneous panic buying occurred on various days. These were the busiest days that the store has ever seen and kept the corrals full.</p>
+                            <p>Returned shopping carts to inside the store, kept the parking lot clean of trash, and carried out heavy items for customers. My last three weeks as a cart pusher were very chaotic as COVID-19 had reached Michigan. These were the busiest days that the store had ever seen, and I kept the corrals full.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
                     </div>
@@ -116,9 +124,9 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages</div>
                     <ul class="list-inline dev-icons">
+						<li class="list-inline-item"><i class="icon-cplusplus"></i></li>
 						<li class="list-inline-item"><i class="fab fa-python"></i></li>
 						<li class="list-inline-item"><i class="icon-csharp"></i></li>
-						<li class="list-inline-item"><i class="icon-cplusplus"></i></li>
                     </ul>
 					<div class="subheading mb-3">Game Design</div>
                     <ul class="fa-ul mb-0">
@@ -152,6 +160,7 @@
 						<li class="list-inline-item"><i class="fab fa-windows"></i></li>
 						<li class="list-inline-item"><i class="fas fa-network-wired"></i></li>
 						<li class="list-inline-item"><i class="fas fa-wifi"></i></li>
+						<li class="list-inline-item"><i class="fas fa-database"></i></li>
                     </ul>
 					
                 </div>
