Added timelinejs iframe

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#timeline">Timeline</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -50,7 +51,16 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/noahsurprenant/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/noahsurprenant"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/noah.surprenant"><i class="fab fa-facebook-f"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+			<!-- Timeline-->
+            <section class="resume-section" id="timeline">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Timeline</h2>
+					<div class="d-flex flex-column flex-md-row justify-content-between mb-5" style="overflow: visible">
+                        <iframe style="overflow: visible" src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ZgVa61opYZIeNWv2_xIY6ML_9fZP2LdP-qPS4Bch8g4&font=Default&lang=en&initial_zoom=2' width='100%' height='750px' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
                     </div>
                 </div>
             </section>
