Minor grammar changes to experience section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">IT Support</h3>
                             <div class="subheading mb-3">Universal Logistics Holdings</div>
-                            <p>Provide technical assistance to our employees and partners across the company over the phone and through ticketing system. My job is to ensure that the rest of the company can run smoothly.</p>
+                            <p>Provide technical assistance to our employees and partners across the company over the phone and through our ticketing system. My job is to ensure that the rest of the company can run smoothly.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
@@ -81,7 +81,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">General Merchandise Clerk</h3>
                             <div class="subheading mb-3">Meijer</div>
-                            <p>Conditioned merchandise, provided customer service in person and on phone, returned unwanted or misplaced merchandise to shelves, and stocked new product. I was trained across multiple departments in General Merchandise: fish, hunting licenses, balloons, garden center, electronics, etc. A typical day’s work had me in many parts of the store helping wherever needed, worked as a cashier or cart pusher when necessary.</p>
+                            <p>Conditioned merchandise, provided customer service in person and on phone, returned unwanted or misplaced merchandise to shelves, and stocked new product. I was trained across multiple departments in General Merchandise: fish, hunting licenses, balloons, garden center, electronics, etc. A typical day of work had me in many parts of the store helping wherever needed; worked as a cashier or cart pusher when necessary.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2020 - August 2021</span></div>
                     </div>
