Added junior dev role, cleaned up some other job descriptions as well

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         
                         <a href="mailto:noah.surprenant@gmail.com">noah.surprenant@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">IT Support @ Universal Logistics Holdings</p>
+                    <p class="lead mb-5">Junior Developer @ Universal Logistics Holdings</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/noahsurprenant/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/noahsurprenant"><i class="fab fa-github"></i></a>
@@ -71,17 +71,25 @@
                     <h2 class="mb-5">Experience</h2>
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Junior Developer</h3>
+                            <div class="subheading mb-3">Universal Logistics Holdings</div>
+                            <p>.NET and Xamarin (Mobile) development</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2022 - Present</span></div>
+                    </div>
+					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">IT Support</h3>
                             <div class="subheading mb-3">Universal Logistics Holdings</div>
-                            <p>Provide technical assistance to our employees and partners across the company over the phone and through our ticketing system. My job is to ensure that the rest of the company can run smoothly.</p>
+                            <p>I was the first point of contact for technical assistance of our employees and contractors. My job was to ensure that business can run smoothly with minimum technical issues, while also adhering to access control requirements.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - May 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">General Merchandise Clerk</h3>
                             <div class="subheading mb-3">Meijer</div>
-                            <p>Conditioned merchandise, provided customer service in person and on phone, returned unwanted or misplaced merchandise to shelves, and stocked new product. I was trained across multiple departments in General Merchandise: fish, hunting licenses, balloons, garden center, electronics, etc. A typical day of work had me in many parts of the store helping wherever needed; worked as a cashier or cart pusher when necessary.</p>
+                            <p>Primary responsibilities included conditioning merchandise, providing customer service, stocking product, & cashiering.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2020 - August 2021</span></div>
                     </div>
@@ -97,7 +105,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Cart Pusher</h3>
                             <div class="subheading mb-3">Meijer</div>
-                            <p>Returned shopping carts to inside the store, kept the parking lot clean of trash, and carried out heavy items for customers. My last three weeks as a cart pusher were very chaotic as COVID-19 had reached Michigan. These were the busiest days that the store had ever seen, and I kept the corrals full.</p>
+                            <p>Primary responsibilities included fetching shopping carts, maintaining cleanliness of parking lot and sidewalks, collecting store trash for disposal, & snow removal.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2020</span></div>
                     </div>
