Updated skills icon section

--- a/index.html
+++ b/index.html
@@ -156,31 +156,18 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Unity <i class="fab fa-unity"></i>
                         </li>
-						<li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Debugging & Problem Solving
-                        </li>
                     </ul>
 					<br>
-					<div class="subheading mb-3">Web Design</div>
-					<ul class="list-inline dev-icons">
-						<li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                    </ul>
-					<div class="subheading mb-3">Microsoft Office</div>
-					<ul class="list-inline dev-icons">
-						<li class="list-inline-item"><i class="far fa-file-excel"></i></li>
-						<li class="list-inline-item"><i class="far fa-file-word"></i></li>
-						<li class="list-inline-item"><i class="far fa-file-powerpoint"></i></li>
-                    </ul>
-					<div class="subheading mb-3">General IT Skills</div>
+					<div class="subheading mb-3">Additional Skills</div>
 					<ul class="list-inline dev-icons">
 						<li class="list-inline-item"><i class="fab fa-windows"></i></li>
 						<li class="list-inline-item"><i class="fas fa-network-wired"></i></li>
 						<li class="list-inline-item"><i class="fas fa-wifi"></i></li>
 						<li class="list-inline-item"><i class="fas fa-database"></i></li>
+						<li class="list-inline-item"><i class="fab fa-docker"></i></li>
+						<li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                     </ul>
-					
                 </div>
             </section>
 			<!-- End of section add new hr here if adding new section -->
